--- a/Pong-slutprojekt/MainWindow.xaml
+++ b/Pong-slutprojekt/MainWindow.xaml
@@ -5,12 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Pong_slutprojekt"
         mc:Ignorable="d"
-        Title="pong" Height="500" Width="700">
+        Title="Pong" Height="500" Width="700" FocusManager.FocusedElement="{Binding ElementName=MyCanvas}">
 
-    <Canvas Name="pongCanvas" KeyUp="move" KeyDown="dontMove" Background="black">
+    <Canvas Name="pongCanvas" Focusable="True" KeyUp="dontMove" KeyDown="Move" Background="black">
         <Image Source="/img/ball.png" Height="20" Canvas.Left="340" Canvas.Bottom="230" />
-        
-        <Image Name="player1"  Source="/img/player.png" Height="100" Canvas.Left="90" Canvas.Bottom="190"/>
+
+            <Image Name="player1"  Source="/img/player.png" Height="100" Canvas.Left="90" Canvas.Bottom="190"/>
         <Image Name="player2" Source="/img/player.png" Height="100" Canvas.Bottom="190" Canvas.Left="590" />
 
         <TextBlock FontSize="51" FontWeight="bold" Foreground="White" VerticalAlignment="Top" HorizontalAlignment="Center"
