--- a/Pong-slutprojekt/MainWindow.xaml
+++ b/Pong-slutprojekt/MainWindow.xaml
@@ -7,13 +7,13 @@
         mc:Ignorable="d"
         Title="Pong" Height="500" Width="700" FocusManager.FocusedElement="{Binding ElementName=MyCanvas}">
 
-    <Canvas Name="pongCanvas" Focusable="True" KeyUp="dontMove" KeyDown="Move" Background="black">
+    <Canvas Name="MyCanvas" Focusable="True" KeyUp="dontMove" KeyDown="Move" Background="black">
         <Image Source="/img/ball.png" Height="20" Canvas.Left="340" Canvas.Bottom="230" />
 
-            <Image Name="player1"  Source="/img/player.png" Height="100" Canvas.Left="90" Canvas.Bottom="190"/>
-        <Image Name="player2" Source="/img/player.png" Height="100" Canvas.Bottom="190" Canvas.Left="590" />
-
-        <TextBlock FontSize="51" FontWeight="bold" Foreground="White" VerticalAlignment="Top" HorizontalAlignment="Center"
+            <Image Name="player1"  Source="/img/player.png" Height="100" Canvas.Left="90" Canvas.Top="195" />
+        <Image Name="player2" Source="/img/player.png" Height="100" Canvas.Top="195" Canvas.Left="590" />
+       
+        <TextBlock Name="scoreboard" FontSize="51" FontWeight="bold" Foreground="White" VerticalAlignment="Top" HorizontalAlignment="Center"
          Margin="0,60,0,0">----------------------------------</TextBlock>
        
         <Image Source="/img/white_lines.png" Height="70" Canvas.Left="385" >
