--- a/Pong-slutprojekt/MainWindow.xaml
+++ b/Pong-slutprojekt/MainWindow.xaml
@@ -5,17 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Pong_slutprojekt"
         mc:Ignorable="d"
+        KeyDown="MainWindow_OnKeyDown"
         Title="Pong" Height="500" Width="700" FocusManager.FocusedElement="{Binding ElementName=MyCanvas}">
 
-    <Canvas Name="MyCanvas" Focusable="True" KeyUp="dontMove" KeyDown="Move" Background="black">
-        <Image Name="player1"  Source="/img/player.png" Height="100" Canvas.Left="90" Canvas.Top="195" />
-        <Image Name="player2" Source="/img/player.png" Height="100" Canvas.Top="195" Canvas.Left="590" />
+    <Canvas Name="MyCanvas" Focusable="True" Background="black">
+        <Image Name="player1"  Source="/img/player.png" Height="100" Canvas.Top="{Binding LeftPadPosition}" />
+        <Image Name="player2" Source="/img/player.png" Height="100" Canvas.Top="{Binding RightPadPosition}" Canvas.Left="655" />
         <Ellipse Width="20" Height="20" Canvas.Left="{Binding BallXPosition}" Canvas.Top="{Binding BallYPosition}" StrokeThickness="0.1" Fill="#EEEEEE"/>
+        <Label Canvas.Left="309" Canvas.Top="35" Content="{Binding LeftResult}" Height="auto" FontSize="40" Foreground="#EEEEEE"/>
+        <Label Canvas.Left="361" Canvas.Top="35" Content="{Binding RightResult}" Height="auto" FontSize="40" Foreground="#EEEEEE"/>
 
-
-        <TextBlock Name="scoreboard" FontSize="51" FontWeight="bold" Foreground="White" VerticalAlignment="Top" HorizontalAlignment="Center"
-         Margin="0,60,0,0">----------------------------------</TextBlock>
-       
         <Image Source="/img/white_lines.png" Height="70" Canvas.Left="385" >
             <Image.RenderTransform>
                 <RotateTransform Angle="90"></RotateTransform>
