--- a/Pong-slutprojekt/MainWindow.xaml
+++ b/Pong-slutprojekt/MainWindow.xaml
@@ -6,16 +6,16 @@
         xmlns:local="clr-namespace:Pong_slutprojekt"
         mc:Ignorable="d"
         KeyDown="MainWindow_OnKeyDown"
-        Title="Pong" Height="500" Width="700" FocusManager.FocusedElement="{Binding ElementName=MyCanvas}">
+        Title="Pong" Height="503" Width="824" ResizeMode="NoResize">
 
-    <Canvas Name="MyCanvas" Focusable="True" Background="black">
+    <Canvas Width="800" Height="475" Name="MyCanvas" Background="black">
         <Image Name="player1"  Source="/img/player.png" Height="100" Canvas.Top="{Binding LeftPadPosition}" />
-        <Image Name="player2" Source="/img/player.png" Height="100" Canvas.Top="{Binding RightPadPosition}" Canvas.Left="655" />
+        <Image Name="player2" Source="/img/player.png" Height="100" Canvas.Top="{Binding RightPadPosition}" Canvas.Left="775" />
         <Ellipse Width="20" Height="20" Canvas.Left="{Binding BallXPosition}" Canvas.Top="{Binding BallYPosition}" StrokeThickness="0.1" Fill="#EEEEEE"/>
-        <Label Canvas.Left="309" Canvas.Top="35" Content="{Binding LeftResult}" Height="auto" FontSize="40" Foreground="#EEEEEE"/>
-        <Label Canvas.Left="361" Canvas.Top="35" Content="{Binding RightResult}" Height="auto" FontSize="40" Foreground="#EEEEEE"/>
+        <Label Canvas.Left="359" Canvas.Top="35" Content="{Binding LeftResult}" Height="auto" FontSize="40" Foreground="#EEEEEE"/>
+        <Label Canvas.Left="411" Canvas.Top="35" Content="{Binding RightResult}" Height="auto" FontSize="40" Foreground="#EEEEEE"/>
 
-        <Image Source="/img/white_lines.png" Height="70" Canvas.Left="385" >
+        <Image Source="/img/white_lines.png" Height="70" Canvas.Left="435" >
             <Image.RenderTransform>
                 <RotateTransform Angle="90"></RotateTransform>
             </Image.RenderTransform>
