--- a/Pong-slutprojekt/MainWindow.xaml
+++ b/Pong-slutprojekt/MainWindow.xaml
@@ -6,21 +6,13 @@
         xmlns:local="clr-namespace:Pong_slutprojekt"
         mc:Ignorable="d"
         KeyDown="Move"
-        Title="Pong" Height="503" Width="824" ResizeMode="NoResize">
+        Title="Pong" Height="503" Width="824">
 
     <Canvas Width="800" Height="475" Name="MyCanvas" Background="black">
         <Image Name="player1"  Source="/img/player.png" Height="100" Canvas.Top="{Binding LeftPadPosition}" />
         <Image Name="player2" Source="/img/player.png" Height="100" Canvas.Top="{Binding RightPadPosition}" Canvas.Left="766" />
-        <Ellipse Width="20" Height="20" Canvas.Left="{Binding BallXPosition}" Canvas.Top="{Binding BallYPosition}" StrokeThickness="0.1" Fill="#EEEEEE"/>
-        <Label Canvas.Left="359" Canvas.Top="35" Content="{Binding LeftResult}" Height="auto" FontSize="40" Foreground="#EEEEEE"/>
-        <Label Canvas.Left="411" Canvas.Top="35" Content="{Binding RightResult}" Height="auto" FontSize="40" Foreground="#EEEEEE"/>
-
-        <Image Source="/img/white_lines.png" Height="70" Canvas.Left="435" >
-            <Image.RenderTransform>
-                <RotateTransform Angle="90"></RotateTransform>
-            </Image.RenderTransform>
-        </Image>
-
-
+        <Image Source="/img/ball.png" Width="20" Height="20" Canvas.Left="{Binding BallXPosition}" Canvas.Top="{Binding BallYPosition}"></Image>
+       <Label Canvas.Left="49" Canvas.Top="20" Content="{Binding LeftResult}" Height="auto" FontSize="70" Foreground="#EEEEEE"/>
+        <Label Canvas.Left="711" Canvas.Top="20" Content="{Binding RightResult}" Height="auto" FontSize="70" Foreground="#EEEEEE"/>
     </Canvas>
 </Window>
